# hello-cmake

./: CMakeLists.txt  README.md
.github/workflows/: actions.yml
src/: CMakeLists.txt  hello.c  hello.h  main.c
test/: CMakeLists.txt  harness.c  harness.h  main.c
